base/src/test/resources/failure/patterns/issues2/issue384.aya.txt
In file $FILE:1:4 ->

  1 |   def a : Type
    |       ^^

Error: The empty pattern-matching function a does not have a telescope

1 error(s), 0 warning(s).
What are you doing?
